I2PSnark: fix alignment of 'no peers' dash (classic)

--- a/installer/resources/themes/snark/classic/snark.css
+++ b/installer/resources/themes/snark/classic/snark.css
@@ -3704,7 +3704,7 @@ th.snarkTorrentPeerCount {
 }
 
 td.snarkTorrentPeerCount, .nopeers td.snarkTorrentPeerCount {
-  text-align: center;
+  text-align: center !important;
   white-space: nowrap;
 }
 
